# lace

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  atomics.h  bench.py  gen.sh  lace.c  lace.c.in  lace.h  lace.h.in  lace.h.macroDecl.in  lace.h.macro_decl.in  lace.h.macro_impl.in  lace.sh  laceConfig.h.in  lace_config.h.in  numa_tools.c  numa_tools.h  prepare.sh
.github/workflows/: ci-build.yml  ci.yml
benchmarks/: CMakeLists.txt  bench.py
benchmarks/cholesky/: cholesky-lace.c  cholesky.c
benchmarks/cilksort/: cilksort  cilksort-lace.c  cilksort-seq.c
benchmarks/dfs/: dfs-lace.c  dfs-seq.c
benchmarks/fib/: CMakeLists.txt  fib-boot.c  fib-lace.c  fib-lace.cpp  fib-seq.c  fib-seq2.c
benchmarks/heat/: heat-lace.c  heat.c
benchmarks/integrate/: integrate-lace.c  integrate.c
benchmarks/knapsack/: knapsack-lace.c
benchmarks/matmul/: matmul-lace.c  matmul-seq.c  matmul-wool.c
benchmarks/nqueens/: nqueens-lace.c  nqueens-seq.c
benchmarks/pi/: pi-lace.c  pi-seq.c  pi-seq2.c
benchmarks/queens/: queens-lace.c  queens-seq.c
benchmarks/strassen/: strassen-lace.c  strassen.cilk
benchmarks/stress/: stress-lace.c
benchmarks/uts/: uts-lace.c  uts-seq.c  uts.c  uts.h  uts2-lace.c
config/: CMakeLists.txt  cmake_check_struct_timespec_exists.c  cmake_static_inline_valid.c
src/: gen.sh  lace.c  lace.h  lace.pc.in  lace.sh  lace14.c  lace14.h  lace_config.h.in
test/: CMakeLists.txt  test_suspend.c  test_together.c
windows/: CMakeLists.txt  windows_helper.c  windows_helper.h  winpthreads.h
